# aws-bill-whisperer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  TEST-FIX-LOG.md  TESTING.md  USP.md  pyproject.toml  template.yaml
.github/workflows/: test.yml
cli/: analyze.py
content/: blog-post.md
docs/: index.html
examples/: sample_output.md  slack_integration.md
landing/: index.html
launch/: hackernews-post.md  landing-page.html  linkedin-post.md  twitter-thread.md
src/: whisper.py  whisperer.py
src/analyzer/: __init__.py  cost_explorer.py  csv_parser.py  formatter.py  handler.py  llm.py  prompts.py  recommendations.py
src/patterns/: __init__.py  _template.py  base.py  p001_unattached_ebs.py  p002_unattached_eip.py  p003_gp2_to_gp3.py  p004_idle_ec2.py  p005_old_snapshots.py  p006_nat_gateway.py  p007_idle_rds.py
tests/: conftest.py  test_analyzer.py  test_p001_unattached_ebs.py  test_p002_unattached_eip.py  test_p003_gp2_to_gp3.py  test_p004_idle_ec2.py  test_p005_old_snapshots.py  test_p006_nat_gateway.py  test_p007_idle_rds.py
tests/fixtures/: sample_cost_data.json  sample_cur.csv
